feat: implement storageprovider mysql
* feat: implement storageprovider mysql

* chore: add comments about generating random SecretAPIKey

* chore: Update go module dependencies

* chore: Update rand seed initialization in GenerateRandomString

* ci: Update go version to 1.20 in CI workflow

* ci: Update golangci-lint to version v1.59.0
